--- a/finalproject/src/main/resources/templates/index.html
+++ b/finalproject/src/main/resources/templates/index.html
@@ -289,7 +289,7 @@
     <div class="container">
       <div class="brand">
         <div class="logo">DealVerse</div>
-        <div class="tagline">Flat, fast, focused price search.</div>
+        <div class="tagline">Flat, fast, focused goods search.</div>
       </div>
     </div>
   </section>
